<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Difficulty level -->
    <ListPreference
        android:key="difficulty"
        android:title="@string/difficulty_title"
        android:summary="@string/difficulty_dsc"
        android:entries="@array/difficulty_levels"
        android:entryValues="@array/difficulty_values"
        android:defaultValue="medium" />

    <!-- Sound On/Off -->
    <SwitchPreferenceCompat
        android:key="sound"
        android:title="@string/sound_title"
        android:summary="@string/sound_dsc"
        android:defaultValue="true" />

    <!-- Theme -->
    <ListPreference
        android:key="theme"
        android:title="@string/theme_title"
        android:summary="@string/theme_dsc"
        android:entries="@array/theme_options"
        android:entryValues="@array/theme_values"
        android:defaultValue="light" />
</PreferenceScreen>